Ajout d'un api twitter

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Alexandre Roy</title>
-        <meta name="description" content="">
+        <meta name="description" content="Cette page web est un portfolio présentant mes compétences en programmation, les différents stages et emplois que j'ai occupés ces dernières années et mes projets personnels">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- We reset all default styles (if you use Bootstrap, it already comes with it) -->
@@ -72,6 +72,9 @@
               <h3>À propos de moi</h3>
               <p >Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus PageMaker.</p>
             </div>
+            <a class="twitter-follow-button col-md-offset-5 "  href="https://twitter.com/AlexandreRoy90"  data-size="large" data-show-count="false"  data-lang="fr">
+              Suis-moi @AlexandreRoy90
+            </a>
         </div><!-- /.container -->
       </div>
 
@@ -131,20 +134,16 @@
           <div class="sociaux col-md-12">
             <h3>Réseaux sociaux</h3>
             <!-- Competence et profil -->  
-            <a href="">
+            <a href="https://www.facebook.com/alexandre.roy.5036">
                   <i class="fa fa-facebook-square fa-3x"></i> 
             </a>
 
-            <a href="">
+            <a href="https://twitter.com/AlexandreRoy90">
                   <i class="fa fa-twitter-square fa-3x"></i> 
             </a>
 
-            <a href="">
+            <a href="https://plus.google.com/u/0/+AlexandreRoy1990/about">
                   <i class="fa fa-google-plus-square fa-3x"></i> 
-            </a>
-
-            <a href="">
-                  <i class="fa fa-linkedin-square fa-3x"></i> 
             </a>
 
           </div>
@@ -329,6 +328,10 @@
           ga('send', 'pageview');
 
         </script>
+
+        <script>window.twttr=(function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],t=window.twttr||{};if(d.getElementById(id))return;js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);t._e=[];t.ready=function(f){t._e.push(f);};return t;}(document,"script","twitter-wjs"));
+        </script>
+
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/oj.JSFiddle/0.0.1/oj.JSFiddle.min.js"></script>
     </body>
 </html>
