--- a/index.html
+++ b/index.html
@@ -27,12 +27,7 @@
         <meta property="og:image" content="http://royalex.github.io/AlexRoy/img/im1.jpg">
         <meta property="og:locale" content="en_US">
         <meta property="og:type" content="website">
-
-
-
-
-        <!-- Useful tool to detect browser features (degrade gracefully)  -->
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+     
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -64,7 +59,20 @@
         </nav> 
 
       <div id="Accueil" class="section" data-nosection="1">
-        <img src="img/im1.jpg" class="img-responsive" alt="Responsive image">
+        <picture>
+          <source srcset="img/im1_2048by1152.jpg" media="(min-width: 50em) and (-webkit-min-device-pixel-ratio: 2), (min-width: 50em) and (min-resolution: 192dpi)">
+          <source srcset="img/im1_2048by1152.jpg" media="(min-width: 50em) and (-webkit-min-device-pixel-ratio: 1.5), (min-width: 50em) and (min-resolution: 144dpi)">
+          <source srcset="img/im1_2048by1152.jpg" media="(min-width: 50em)">
+          <source srcset="img/im1_1050by699.jpg" media="(min-width: 40em) and (-webkit-min-device-pixel-ratio: 1.5), (min-width: 40em) and (min-resolution: 144dpi)">
+          <source srcset="img/im1_700by466.jpg" media="(min-width: 40em)">
+          <source srcset="img/im1_1320by1042.jpg" media="(min-width: 30em) and (-webkit-min-device-pixel-ratio: 2), (min-width: 30em) and (min-resolution: 192dpi)">
+          <source srcset="img/im1_990by782.jpg" media="(min-width: 30em) and (-webkit-min-device-pixel-ratio: 1.5), (min-width: 30em) and (min-resolution: 144dpi)">
+          <source srcset="img/im1_660by521.jpg" media="(min-width: 30em)">
+          <source srcset="img/im1_800by1042.jpg" media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)">
+          <source srcset="img/im1_600by782.jpg" media="(-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi)">
+          <source srcset="img/im1_400by521.jpg">
+          <img srcset="img/im1_400by521.jpg" class="img-responsive" itemprop="image" alt="About me, myself and I">
+        </picture>
       
 
         <div class="container col-md-12 accueil">
@@ -296,7 +304,8 @@
     <div id="end">
     </div>
 
-
+        <!-- Useful tool to detect browser features (degrade gracefully)  -->
+        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
         <!-- jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
