concatenation des fichiers css et ajustement d'une bordure lorsque la resolution etait trop petite

--- a/index.html
+++ b/index.html
@@ -11,14 +11,10 @@
         <!-- <link rel="stylesheet" href="css/normalize.css"> -->
 
         <!-- Twitter Bootstrap (comment if you you want to start from scratch, and uncomment normalize.css) -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
 
         <!-- Our own stylesheet -->
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/master.min.css">
 
-        <link rel="stylesheet" href="css/style.css">
         
         <meta property="og:title" content="Alexandre Roy">
         <meta property="og:description" content="Cette page web est un portfolio présentant mes compétences en programmation, les différents stages et emplois que j'ai occupés ces dernières années et mes projets personnels">
@@ -178,11 +174,11 @@
         <div class="col-md-2 col-md-offset-1">
             <h4>Éducation</h4>  
         </div>
-        <div class="content col-md-5">
+        <div class="border-bottom content col-md-5">
           <h4>Informatique de gestion</h4>  
           <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre </p>
         </div>
-         <div class="col-md-4">
+         <div class="col-md-4 date-content">
           <h4>Université de Sherbrooke</h4>  
           <p>2012-2015</p>
         </div>
@@ -191,11 +187,11 @@
         <div class="col-md-2 col-md-offset-1">
             <h4>Expérience</h4>  
         </div>
-        <div class="content col-md-5">
+        <div class="border-bottom content col-md-5">
           <h4>Programmeur / Analyste VB.Net</h4>  
           <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre </p>
         </div>
-         <div class="col-md-4">
+         <div class="col-md-4 date-content">
           <h4>Desjardins Assurances générales</h4>  
           <p>Stage été 2014</p>
         </div>
@@ -216,11 +212,11 @@
         <div class="col-md-2 col-md-offset-1">
             <h4>Éducation</h4>  
         </div>
-        <div class="content col-md-5">
+        <div class="border-bottom  content col-md-5">
           <h4>Informatique de gestion</h4>  
           <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre </p>
         </div>
-         <div class="col-md-4">
+         <div class="col-md-4 date-content">
           <h4>Université de Sherbrooke</h4>  
           <p>2012-2015</p>
         </div>
@@ -229,26 +225,23 @@
         <div class="col-md-2 col-md-offset-1">
             <h4>Expérience</h4>  
         </div>
-        <div class="content col-md-5">
+        <div class="border-bottom content col-md-5">
           <h4>Programmeur / Analyste VB.Net</h4>  
           <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre </p>
         </div>
-         <div class="col-md-4">
+         <div class="col-md-4 date-content">
           <h4>Desjardins Assurances générales</h4>  
           <p>Stage été 2014</p>
         </div>
 
-        <div class="content col-md-5 col-md-offset-3">
+        <div class="border-bottom content col-md-5 col-md-offset-3">
           <h4>Programmeur / Analyste VB.Net</h4>  
           <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre </p>
         </div>
-         <div class="col-md-4">
+         <div class="col-md-4 date-content">
           <h4>Desjardins Assurances générales</h4>  
           <p>Stage été 2014</p>
         </div>
-
-
-
 
       </div>
 
