Test optimisation srcset

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <source srcset="img/im1_800by1042.jpg" media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)">
           <source srcset="img/im1_600by782.jpg" media="(-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi)">
           <source srcset="img/im1_400by521.jpg">
-          <img src="img/im1_400by521.jpg" class="img-responsive" alt="Magnifique vue">
+          <img srcset="img/im1_400by521.jpg" class="img-responsive" alt="Magnifique vue">
         </picture>
       
 
