--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
         <!-- We reset all default styles (if you use Bootstrap, it already comes with it) -->
         <!-- <link rel="stylesheet" href="css/normalize.css"> -->
-
-        <!-- Twitter Bootstrap (comment if you you want to start from scratch, and uncomment normalize.css) -->
+ 
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
 
         <!-- Our own stylesheet -->
         <link rel="stylesheet" href="css/master.min.css">
