revert font-awesome

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!-- We reset all default styles (if you use Bootstrap, it already comes with it) -->
         <!-- <link rel="stylesheet" href="css/normalize.css"> -->
  
-        
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
 
         <!-- Our own stylesheet -->
         <link rel="stylesheet" href="css/master.min.css">
@@ -67,7 +67,7 @@
           <source srcset="img/im1_800by1042.jpg" media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)">
           <source srcset="img/im1_600by782.jpg" media="(-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi)">
           <source srcset="img/im1_400by521.jpg">
-          <img src="img/im1_400by521.jpg" class="img-responsive" alt="Magnifique vue">
+          <img srcset="img/im1_400by521.jpg" class="img-responsive" alt="Magnifique vue">
         </picture>
       
 
